WIP browser answer

--- a/file/res/common.css
+++ b/file/res/common.css
@@ -2,6 +2,7 @@
     background-color: lightcoral;
 }
 
+/* log from mail protocol */
 #log .mail {
     background-color: lightgrey;
     font-style: italic;
